--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -13,7 +13,7 @@
 <body>
     <div class="garde">
         <div>
-            <a href="{% url 'account:register_app' %}">Créer un compte</a>
+            <a href="{% url 'accounts:register'%}">Créer un compte</a>
         </div>
         <div>
             <a href="#">sign in</a>
@@ -31,7 +31,7 @@
                      <!-- message d'erreur en cas de faut compte -->
                      {% for message in messages %}
                         {{message}}
-                        <a href="{% url 'account:pass_forgeted' %}">Mot de pass oublier</a>
+                        <a href="{% url 'accounts:pass_forgeted' %}">Mot de pass oublier</a>
                      {% endfor%}
                 </span>
             </div>
