--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,7 +10,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-   
-    
+    {% include 'app/entet_pied/header.html'%}
+    {{message}}
 </body>
 </html>
