--- a/accounts/static/account/css/input.css
+++ b/accounts/static/account/css/input.css
@@ -3,42 +3,42 @@
 @tailwind utilities;
 
 body{
-    @apply bg-gray-100 flex justify-center top-1/2
+    @apply bg-gray-200 flex content-center h-full justify-center
+}
+h1{
+    @apply text-2xl
 }
 .boite{
-    @apply shadow-lg bg-white mb-4 px-9 py-4  mt-4 w-auto
-}
-label{
-    @apply text-gray-500  
-}
-span{
-    @apply bg-red-100 text-red-700 rounded border border-red-700 py-3 px-2 block w-auto;
-    @apply mb-4
-    
-}
-input{
-    @apply mb-4 border shadow-inner text-gray-600 ml-2  justify-center  block
-}
-input:focus{
-    @apply border border-green-500 
-}
-button:focus{
-    @apply border-green-700 
-}
-button{
-    @apply flex w-full justify-center
+    @apply bg-white shadow-lg max-w-lg flex 
 }
 
+img{
+    @apply w-full h-40 object-cover
+}
+html{
+    @apply h-full
+}
+.titre{
+    @apply p-4 font-bold text-gray-800 mb-2
+}
+
+
+.champ{
+    @apply mb-4
+}
+label{
+    @apply block text-gray-600 mb-2
+}
+
+input{
+    @apply shadow-lg border px-3 py-2  text-gray-700 w-full
+}
+input:focus{
+    @apply
+}
 button{
-    @apply bg-blue-300  border border-blue-900 w-1/2 px-3 py-2;
-    @apply rounded text-blue-950
+    @apply bg-blue-500 text-white px-4 py-2 rounded 
 }
-button:hover{
-    @apply bg-green-300 transition text-gray-600 border-green-700
-}
-.html_conn{
-    @apply flex justify-center
-}
-.error{
-    @apply  text-red-700 rounded px-3 py-2 block w-auto mb-4 
+.garde{
+    @apply bg-green-500 flex
 }
