--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -22,6 +22,10 @@
     <form action="" method="post">
         {%csrf_token%}
         <div class="boite">
+            <img src="{% static 'assets/login.jpg' %}" alt="" srcset="">
+            <div class="titre">
+                <h1>Connexion</h1>
+            </div>
             <div class=" champ">
                 <label for="username">Nom d'utilisateur : </label><input type="text" name="username" id="">
                 <label for="password">Mot de passe : </label><input type="password" name="password" id="">
